--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
-<html>
-    <p> Hello World</p>
+<html lang="en">
+    <head>
+        <title>Accountabilabuddy</title>
+    </head>
+
+    <body>
+        <p> Hello World</p>
+    </body>
 </html>
