CSS sheet added(not working yet)

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
     <head>
         <title>Accountabilabuddy</title>
+        <link src="styles.css" rel="stylesheet">
     </head>
 
-    <body>
+    <body class="pageBackground">
         <p> Hello World</p>
     </body>
 </html>
