CSS sheet connected and functional

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Accountabilabuddy</title>
-        <link src="styles.css" rel="stylesheet">
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body class="pageBackground">
