added About Us page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Accountabilabuddy</title>
+        <title>Accountabilibuddy</title>
         <link rel="stylesheet" href="styles.css">
     </head>
 
     <body class="pageBackground">
-        <p> Hello World</p>
+        <div> <h1 class="titleBackground">Accountabilibuddy!</h1> </div>
+        <div>
+            <p> Welcome to Accountabilibuddy! Our goal is to
+                 provide you with the resources you need to 
+                 keep your body healthy!
+            </p>
+        </div>
+        <div><a href="aboutus.html">About Us</a></div>
     </body>
 </html>
