--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     </head>
 
     <body class="pageBackground">
-        <div> <h1 class="titleBackground">Accountabilibuddy!</h1> </div>
+        <div class="header"> <h1>Accountabilibuddy!</h1> </div>
         <div>
             <p> Welcome to Accountabilibuddy! Our goal is to
                  provide you with the resources you need to 
                  keep your body healthy!
             </p>
         </div>
+        <div class="button"><a href="surveypage.html">Take The Survey!</a></div>
         <div><a href="aboutus.html">About Us</a></div>
     </body>
 </html>
