--- a/aboutus.HTML
+++ b/aboutus.HTML
@@ -6,7 +6,7 @@
     </head>
 
     <body class="pageBackground">
-        <div><h1 class="titleBackground">About Us</h1></div>
+        <div><h1 class="header">About Us</h1></div>
         <div><p>With Accountabilibuddy we hope to provide you with the resources
             you need to take control of your health. Your body is your buddy, And 
             you are accoutable for for it!</p> </div>
