--- a/aboutus.HTML
+++ b/aboutus.HTML
@@ -6,10 +6,13 @@
     </head>
 
     <body class="pageBackground">
-        <div><h1 class="header">About Us</h1></div>
-        <div><p>With Accountabilibuddy we hope to provide you with the resources
-            you need to take control of your health. Your body is your buddy, And 
-            you are accoutable for for it!</p> </div>
+        <header class="header"><h1>About Us</h1></header>
+        <div class="aboutUsContent"><p>With Accountabilibuddy we hope to provide you with 
+            the resources you need to take control of your health. Your body is 
+            your buddy, and you are accoutable for for it! By filling out a quick, 
+            completely anonymous survey, we provide you with a handful of resources 
+            to best provide you with the ability to make an educated descision
+            about your future.</p> </div>
 
         <div><a href="index.html">Home</a></div>
     </body>
