--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body class="pageBackground">
-        <div class="header"> <h1>Accountabilibuddy!</h1> </div>
+        <header class="header"> <h1>Accountabilibuddy!</h1> </header>
         <div>
             <p> Welcome to Accountabilibuddy! Our goal is to
                  provide you with the resources you need to 
@@ -14,6 +14,6 @@
             </p>
         </div>
         <div class="button"><a href="surveypage.html">Take The Survey!</a></div>
-        <div><a href="aboutus.html">About Us</a></div>
+        <footer class="footer"><a href="aboutus.html">About Us</a></footer>
     </body>
 </html>
