--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
     <body class="pageBackground">
         <header class="header"> <h1>Accountabilibuddy!</h1> </header>
-        <div>
+        <div class="banner">
+        </div>
+        <div class="aboutUsContent">
             <p> Welcome to Accountabilibuddy! Our goal is to
                  provide you with the resources you need to 
                  keep your body healthy!
