--- a/aboutus.HTML
+++ b/aboutus.HTML
@@ -14,6 +14,9 @@
             to best provide you with the ability to make an educated descision
             about your future.</p> </div>
 
+        <div class="aboutUsContent"><p>This project was created by Jace Reinke, 
+            Jacob Hutchinson, and Chris Warren</p></div>
+
         <div><a href="index.html">Home</a></div>
     </body>
 </html>
