--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
 
     <body class="pageBackground">
         <header class="header"> <h1>Accountabilibuddy!</h1> </header>
-        <div class="banner">
-        </div>
-        <div class="aboutUsContent">
-            <p> Welcome to Accountabilibuddy! Our goal is to
-                 provide you with the resources you need to 
-                 keep your body healthy!
-            </p>
+        <div class="banner"><p class="homeContent"> Welcome to Accountabilibuddy!</p></div>
+        <div class="homeContent">
+            <p>Our goal is to provide you with the resources you need to 
+                keep your body healthy! Take a brief & anonymous survey and recieve
+                resources on how to take preventative action to keep control
+                of your health!</p>
         </div>
         <div class="button"><a href="surveypage.html">Take The Survey!</a></div>
         <footer class="footer"><a href="aboutus.html">About Us</a></footer>
