--- a/surveypage.html
+++ b/surveypage.html
@@ -9,5 +9,10 @@
         <div><h1 class="header">Survey</h1></div>
 
         <div><a href="index.html">Home</a></div>
+        <div>
+            <form action="" enctype="multipart/form-data" method="POST">
+                
+            </form>
+        </div>
     </body>
 </html>
