--- a/index.html
+++ b/index.html
@@ -18,3 +18,30 @@
         <footer class="footer"><a href="aboutus.html">About Us</a></footer>
     </body>
 </html>
+<!-- Jaces Code
+
+    <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Accountabilibuddy</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+
+    <body class="pageBackground">
+        <header class="header"> <h1>Accountabilibuddy!</h1> </header>
+        <div class="banner">
+        </div>
+        <div class="lowerDiv">
+            <div class="aboutUsContent">
+                <p> Welcome to Accountabilibuddy! Our goal is to
+                    provide you with the resources you need to 
+                    keep your body healthy!
+                </p>
+            </div>
+            <div class="buttonDiv"><a class="button" href="surveypage.html">Take The Survey!</a></div>
+        </div>
+        <footer class="footer"><a href="aboutus.html">About Us</a></footer>
+    </body>
+</html>
+    
+-->
