--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <body class="pageBackground">
         <header class="header"> <h1>Accountabilibuddy!</h1> </header>
         <div class="banner"><p class="homeContent"> Welcome to Accountabilibuddy!</p></div>
-        <div class="homeContent">
-            <p>Our goal is to provide you with the resources you need to 
-                keep your body healthy! Take a brief & anonymous survey and recieve
-                resources on how to take preventative action to keep control
-                of your health!</p>
+        <div class="lowerDiv">
+            <div class="aboutUsContent">
+                <p>Our goal is to provide you with the resources you need to 
+                    keep your body healthy! Take a brief & anonymous survey and recieve
+                    resources on how to take preventative action to keep control
+                    of your health!</p>
+            </div>
         </div>
-        <div class="button"><a href="surveypage.html">Take The Survey!</a></div>
+        <div class="buttonDiv"><a class="button" href="surveypage.html">Take The Survey!</a></div>
         <footer class="footer"><a href="aboutus.html">About Us</a></footer>
     </body>
 </html>
