--- a/surveypage.html
+++ b/surveypage.html
@@ -10,7 +10,7 @@
         <header class="header"><h1>Survey</h1></header>
         
         <div id="form1">
-            <h1>Persoal Info</h1>
+            <h1>Personal Info</h1>
             <form action="" enctype="multipart/form-data" method="POST">
                 <label for="sex">Sex: </label>
                 <select id="sex" name="sex">
@@ -37,6 +37,8 @@
                     <option>2-4</option>
                     <option>5+</option>
                 </select>
+                <label for="medication">Do you carry any medication in case of any emergency?</label>
+                <input type="text" id ="medication" name="medication" placeholder="Enter medications here">
             </form>
             <a class="cancelButton" href="index.html">Cancel</a>
             <a class="nextButton" id="next1">Next</a>
@@ -50,8 +52,14 @@
                     <option>Yes</option>
                     <option>No</option>
                 </select>
+                <label for="familyBlood">Does Your Family Have Any History of High Blood Pressure: </label>
+                <select id="familyBlood" name="familyBlood">
+                    <option>Yes</option>
+                    <option>No</option>
+                </select>
             </form>
             <a class="cancelButton" href="index.html">Cancel</a>
+            <a class="previousButton" href="surveypage.html">Previous</a>
             <a class="nextButton" id="next2">Next</a>
         </div>
 
