Commit adding a period, checking if all branches were merged

--- a/aboutus.HTML
+++ b/aboutus.HTML
@@ -15,7 +15,7 @@
             about your future.</p> </div>
 
         <div class="aboutUsContent"><p>This project was created by Jace Reinke, 
-            Jacob Hutchinson, and Chris Warren</p></div>
+            Jacob Hutchinson, and Chris Warren.</p></div>
 
         <div><a href="index.html">Home</a></div>
     </body>
