Co-authored-by: cwarren279 <cwarren279@users.noreply.github.com>

--- a/aboutus.HTML
+++ b/aboutus.HTML
@@ -17,6 +17,6 @@
         <div class="aboutUsContent"><p>This project was created by Jace Reinke, 
             Jacob Hutchinson, and Chris Warren.</p></div>
 
-        <div><a href="index.html">Home</a></div>
+            <div class="buttonDiv"><a class="button" href="index.html">Home</a></div>
     </body>
 </html>
