--- a/surveypage.html
+++ b/surveypage.html
@@ -31,6 +31,7 @@
                     <option>55-59</option>
                     <option>60+</option>
                 </select>
+
                 <label for="exercise">How Many Times Do You Exercise Weekly: </label>
                 <select id="exercise" name="exercise">
                     <option>Less Than 2</option>
@@ -39,7 +40,14 @@
                 </select>
                 <label for="medication">Do you carry any medication in case of any emergency?</label>
                 <input type="text" id ="medication" name="medication" placeholder="Enter medications here">
+
+                <label for="">Do You Engage In Any Of The Following Habits?</label>
+                <label for="smoking">Smoking?</label>
+                <input type="checkbox" id="smoking" name="smoking">
+                <label for="drinking">Drinking?</label>
+                <input type="checkbox" id="drinking" name="drinking">
             </form>
+
             <a class="cancelButton" href="index.html">Cancel</a>
             <a class="nextButton" id="next1">Next</a>
         </div>
@@ -52,7 +60,7 @@
                     <option>Yes</option>
                     <option>No</option>
                 </select>
-                <label for="familyBlood">Does Your Family Have Any History of High Blood Pressure: </label>
+                <label for="familyBlood">Do You or Your Family Have Any History of High Blood Pressure: </label>
                 <select id="familyBlood" name="familyBlood">
                     <option>Yes</option>
                     <option>No</option>
