--- a/surveypage.html
+++ b/surveypage.html
@@ -9,18 +9,20 @@
     <body class="pageBackground">
         <header class="header"><h1>Survey</h1></header>
         
-        <div id="form1">
+        <div id="form1" class="surveyScreen">
             <h1>Personal Info</h1>
             <form action="" enctype="multipart/form-data" method="POST">
                 <label for="sex">Sex: </label>
                 <select id="sex" name="sex">
                     <option>Male</option>
                     <option>Female</option>
-                    <option>Other</option>
+                    <option selected = "selected">Other</option>
                 </select>
+                <br>
+                <br>
                 <label for="age">Age: </label>
                 <select id="age" name="age">
-                    <option>Under 18</option>
+                    <option selected = "selected">Under 18</option>
                     <option>18-24</option>
                     <option>25-29</option>
                     <option>30-34</option>
@@ -31,40 +33,64 @@
                     <option>55-59</option>
                     <option>60+</option>
                 </select>
-
+                <br>
+                <br>
                 <label for="exercise">How Many Times Do You Exercise Weekly: </label>
                 <select id="exercise" name="exercise">
-                    <option>Less Than 2</option>
+                    <option selected = "selected">Less Than 2</option>
                     <option>2-4</option>
                     <option>5+</option>
                 </select>
+                <br>
+                <br>
                 <label for="medication">Do you carry any medication in case of any emergency?</label>
                 <input type="text" id ="medication" name="medication" placeholder="Enter medications here">
-
-                <label for="">Do You Engage In Any Of The Following Habits?</label>
-                <label for="smoking">Smoking?</label>
-                <input type="checkbox" id="smoking" name="smoking">
-                <label for="drinking">Drinking?</label>
-                <input type="checkbox" id="drinking" name="drinking">
+                <br>
+                <br>
+                <label for="">Do You Engage In Any Of The Following Habits?:</label>
+                <br>
+                <label for="smoking">Smoking</label>
+                <select id="smoking" name="smoking" >
+                    <option>Yes</option>
+                    <option selected = "selected">No</option>
+                </select>
+                <label for="drinking">Drinking</label>
+                <select id="drinking" name="drinking">
+                    <option >Yes</option>
+                    <option selected = "selected">No</option>
+                </select>
+                <br>
+                <br>
             </form>
 
             <a class="cancelButton" href="index.html">Cancel</a>
             <a class="nextButton" id="next1">Next</a>
         </div>
 
-        <div id="form2">
+        <div id="form2" class="surveyScreen">
             <h1>Family History</h1>
             <form action="" enctype="multipart/form-data" method="POST">
                 <label for="familyCancer">Does Your Family Have Any History of Cancer: </label>
                 <select id="familyCancer" name="familyCancer">
                     <option>Yes</option>
-                    <option>No</option>
+                    <option selected = "selected">No</option>
                 </select>
+                <br>
+                <br>
                 <label for="familyBlood">Do You or Your Family Have Any History of High Blood Pressure: </label>
                 <select id="familyBlood" name="familyBlood">
                     <option>Yes</option>
-                    <option>No</option>
+                    <option selected = "selected">No</option>
                 </select>
+                <br>
+                <br>
+                <label for="familyCholesterol">Do You or Your Family Have Any History of High Cholesterol: </label>
+                <select id="familyCholesterol" name="familyCholesterol">
+                    <option>Yes</option>
+                    <option selected = "selected">No</option>
+                </select>
+                <br>
+                <br>
             </form>
             <a class="cancelButton" href="index.html">Cancel</a>
             <a class="previousButton" href="surveypage.html">Previous</a>
@@ -73,7 +99,7 @@
 
         <div id="results">
             <h1>Results</h1>
-            <div id="surveyResults"></div>
+            <div id="surveyResults" class="surveyResults"></div>
             <a class="cancelButton" href="index.html">Home</a>
         </div>
 
