even more almost finished

--- a/surveypage.html
+++ b/surveypage.html
@@ -14,9 +14,8 @@
             <form action="" enctype="multipart/form-data" method="POST">
                 <label for="sex">Sex: </label>
                 <select id="sex" name="sex">
-                    <option>Male</option>
+                    <option selected = "selected">Male</option>
                     <option>Female</option>
-                    <option selected = "selected">Other</option>
                 </select>
                 <br>
                 <br>
@@ -86,6 +85,13 @@
                 <br>
                 <label for="familyCholesterol">Do You or Your Family Have Any History of High Cholesterol: </label>
                 <select id="familyCholesterol" name="familyCholesterol">
+                    <option>Yes</option>
+                    <option selected = "selected">No</option>
+                </select>
+                <br>
+                <br>
+                <label for="depression">Do You or Your Family Have Any History of Depression: </label>
+                <select id="depression" name="depression">
                     <option>Yes</option>
                     <option selected = "selected">No</option>
                 </select>
