--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body class="pageBackground">
         <header class="header" > <h1>Accountabilibuddy!</h1> </header>
-        <div class="banner"><p class="homeContent"> Welcome to Accountabilibuddy!</p></div>
+        <div class="banner"><p class="homeContent"></p></div>
         <div class="lowerDiv">
             <div class="aboutUsContent">
                 <p>Our goal is to provide you with the resources you need to 
